# task

./: .gitignore  .travis.yml  .travis_script.sh  CMakeLists.txt  README.md
hello_world/: main.c
simple_chat/: CMakeLists.txt  Doxyfile  README.md
simple_chat/chat/: CMakeLists.txt  chat.pro  chat.pro.user.0cd5d78  chat.pro.user.8c147ae  defines.h  gui.cpp  gui.h  main.cpp  main.qml  main.qmlc  qml.qrc  test.cpp  test.h
simple_chat/chat/include/: defines.h  gui.h  test.h
simple_chat/chat/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  configurations.xml  project.xml  qt-Debug.mk  qt-Debug.pro  qt-Release.pro
simple_chat/chat/nbproject/private/: private.xml
simple_chat/chat/src/: gui.cpp  main.cpp  test.cpp
simple_chat/chat/test/: newsimpletest.cpp  unit_test.cpp
simple_chat/chat/ui/: main.qml  main.qrc
simple_chat/report/: CMakeLists.txt  main.cpp  report.cpp  report.h  report.pro  report.pro.user.0cd5d78  report.pro.user.8c147ae  report.ui
simple_chat/report/include/: crash.h  ui_crash.h
simple_chat/report/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml  qt-Debug.mk  qt-Debug.pro  qt-Release.pro
simple_chat/report/nbproject/private/: private.xml
simple_chat/report/src/: crash.cpp.cc  main.cpp
simple_chat/report/ui/: Crash.ui
stm32_task/: .cproject  .mxproject  .project  Doxyfile  stm32_task.ioc
stm32_task/Application/: application.cpp  application.hpp  parser.hpp
stm32_task/Application/background/: background.cpp  background.hpp
stm32_task/Application/command/: command.cpp  command.hpp
stm32_task/Inc/: dac.h  defines.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  tim.h  usart.h
stm32_task/Src/: adc.c  dac.c  dma.c  freertos.c  gpio.c  main.c  stm32f3xx_it.c  tim.c  usart.c
